Fix z-index (again)

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -3,6 +3,7 @@ nav {
     left: 0;
     top: 0;
     z-index: 99;
+    -webkit-transform: translate3d(0,0,0);
 }
 
 .navbar {
